fix config dropdown on chrome - removes help

--- a/source/Vmbackup4DangerZone.page
+++ b/source/Vmbackup4DangerZone.page
@@ -15,7 +15,7 @@ Icon="clone"
   <!-- current config -->
   <div class="wrapper_div">
     <div id="current_config_danger_zone_div" class="grid_container_left pad_config_top">
-      <label name="current_config_danger_zone_label" class="input_description config_text">Currently editing config:</label>
+      <label name="current_config_danger_zone_label" class="config_label config_text">Currently editing config:</label>
       <div class="user_input_div"><select id="current_config_danger_zone" name="current_config_danger_zone" size="1">
         <option value="default">default</option>
         <?php
